Tue Oct 18 16:36:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DLDFLAGS): append --compress-debug-sections=zlib
	  if available, which reduces the size of LIBRUBY_SO by half or
	  more.

Mon Oct 17 16:20:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/configure.bat: add option to enable/disable to install
	  static ruby library.  defaulted to "no".  [Feature #12845]

	* configure.in (install-static-library): add option to enable/
	  disable to install static ruby library.  defaulted to "no" if
	  enable-shared.  [Feature #12845]

	* tool/rbinstall.rb (local-arch-lib): respect the option.

Sun Oct 16 15:09:06 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/windows_1254.c, test/ruby/enc/test_case_comprehensive.rb:
	  Implement non-ASCII case conversion for Windows-1254.

Sat Oct 15 14:17:05 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_args.c (refine_sym_proc_call): search and call method with
	  refinements.

	* vm_args.c (vm_caller_setup_arg_block): enable refinements when
	  enabled in the caller.  [Feature #9451]

Sat Oct 15 00:54:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_exec_cmd): use UTF-8 version aspawn.
	  [ruby-dev:49838] [Bug #12841]

Fri Oct 14 22:26:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse/kwargs.rb (OptionParser#define_by_keywords):
	  [EXPERIMENTAL] extract command line option definitions from the
	  information of keyword arguments.

Fri Oct 14 18:27:18 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* object.c: Improve documentation for Float conversion.
	  [ruby-core:71661][Bug #11736][ci skip]

Fri Oct 14 18:00:20 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/logger.rb: Improve Logger.new option documentation.
	  [Feature #12803][ruby-core:77467]

Fri Oct 14 17:20:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (make_switch, parse_in_order): unify underscores
	  to hyphens.

Fri Oct 14 10:48:37 2016  Eric Wong  <e@80x24.org>
